Try to fix footer not sticking on mobile devices
Still haven't fixed it :)

--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
     padding: 0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     display: flex;
     flex-direction: column;
     font-family: Robot Reavers, Roboto, sans-serif;
-    height: 100vh;
+    height: 100%;
     background-color: #271524;
 }
 
@@ -25,8 +29,8 @@ body {
     flex-shrink: 0;
     background-color: #543c52;
     height: 60px;
-    min-width: 768px;
     width: auto;
+    min-width: 780px;
 }
 
 .navbar .container {
@@ -57,8 +61,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: auto;
-    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
     height: 100%;
     gap: 100px;
 }
@@ -110,17 +114,18 @@ button:active {
     justify-content: space-between;
     gap: 100px;
     width: 700px;
-    font-size: 3em;
     align-items: center;
 }
 
 .you {
     align-self: flex-start;
+    font-size: 50px;
     color: #af4eff;
 }
 
 .bot {
     align-self: flex-end;
+    font-size: 50px;
     color: #af4eff;
 }
 
@@ -146,19 +151,12 @@ button:active {
     color: #ef75ff;
 }
 
-/* #user_output,
-#bot_output {
-    display: none;
-    transition-duration: 300ms;
-} */
-
 #user_output_active,
 #bot_output_active {
     transition-duration: 300ms;
     background-color: #f55951;
     border: solid 0.5em #f55951;
     border-radius: 20%;
-    /* box-shadow: 0px 0px 10px 0px #be00af; */
     width: 200px;
     height: 200px;
 }
@@ -198,7 +196,7 @@ button:active {
     align-items: center;
     height: 60px;
     width: auto;
-    min-width: 768px;
+    min-width: 780px;
     background-color: #543c52;
     text-align: center;
     font-size: 20px;
